--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "llrbpage.h": "c",
         "llrbarch.h": "c",
-        "page.h": "c"
+        "page.h": "c",
+        "readcontent.h": "c"
     }
 }
